--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.16.0" />
+    <PackageReference Include="SendGrid" Version="9.25.3" />
   </ItemGroup>
 
   <PropertyGroup>
